--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  width: 100vw;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     background-color: #1e1e1e; /* Dark mode background for improved contrast */
